@@ -104,6 +104,9 @@ Optimizations
 * LUCENE-6456: Queries that generate doc id sets that are too large for the
   query cache are not cached instead of evicting everything. (Adrien Grand)
 
+* LUCENE-6455: Require a minimum index size to enable query caching in order
+  not to cache eg. on MemoryIndex. (Adrien Grand)
+
 Bug Fixes
 
 * LUCENE-6378: Fix all RuntimeExceptions to throw the underlying root cause.
